force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Use_Batch_Create_Process__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Use_Batch_Create_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Batch Create Process</label>
    <type>Checkbox</type>
</CustomField>