force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Zoom__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Zoom__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Captures the Gantt zoom setting defined by user.</description>
    <label>Zoom</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>