force-app/main/default/objects/inspire1__Project__c/fields/Is_COI__c.field-meta.xml
<CustomField>
    <fullName>Is_COI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is COI</label>
    <type>Checkbox</type>
</CustomField>