force-app/main/default/objects/inspire1__Project__c/fields/Last_date_for_license_extention__c.field-meta.xml
<CustomField>
    <fullName>Last_date_for_license_extention__c</fullName>
    <inlineHelpText>IF SUBMIT FOR EXT, Update Cert Exp Date</inlineHelpText>
    <label>Last date for license extention</label>
    <type>Date</type>
</CustomField>