force-app/main/default/objects/inspire1__Project__c/fields/License_submitted_on_PT__c.field-meta.xml
<CustomField>
    <fullName>License_submitted_on_PT__c</fullName>
    <label>License submitted on PT</label>
    <type>Date</type>
</CustomField>