force-app/main/default/objects/inspire1__Project__c/fields/LicenseEndDate__c.field-meta.xml
<CustomField>
    <fullName>LicenseEndDate__c</fullName>
    <label>License End Date</label>
    <type>Date</type>
</CustomField>