force-app/main/default/objects/inspire1__Project__c/fields/LicenseStartDate__c.field-meta.xml
<CustomField>
    <fullName>LicenseStartDate__c</fullName>
    <label>License Start Date</label>
    <type>Date</type>
</CustomField>