force-app/main/default/objects/inspire1__Project__c/fields/non_compliance_summary__c.field-meta.xml
<CustomField>
    <fullName>non_compliance_summary__c</fullName>
    <label>Non-Compliance Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>