force-app/main/default/objects/inspire1__Project__c/fields/of_NCs__c.field-meta.xml
<CustomField>
    <fullName>of_NCs__c</fullName>
    <label># of NCs</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>