force-app/main/default/objects/inspire1__Project__c/fields/Palm_Trace_ID__c.field-meta.xml
<CustomField>
    <fullName>Palm_Trace_ID__c</fullName>
    <formula>Program_Membership__r.Membership_Number_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Palm Trace ID</label>
    <type>Text</type>
</CustomField>