force-app/main/default/objects/inspire1__Project__c/fields/PalmTraceSubmissionNotes__c.field-meta.xml
<CustomField>
    <fullName>PalmTraceSubmissionNotes__c</fullName>
    <label>Palm Trace Submission Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>