force-app/main/default/objects/inspire1__Project__c/fields/Program_Membership__c.field-meta.xml
<CustomField>
    <fullName>Program_Membership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Membership</label>
    <referenceTo>Program_Membership__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>