force-app/main/default/objects/inspire1__Project__c/fields/PT_Llicense_Extention__c.field-meta.xml
<CustomField>
    <fullName>PT_Llicense_Extention__c</fullName>
    <label>PT Llicense Extention</label>
    <type>Date</type>
</CustomField>