force-app/main/default/objects/inspire1__Project__c/fields/Rebuttal__c.field-meta.xml
<CustomField>
    <fullName>Rebuttal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rebuttal</label>
    <type>Checkbox</type>
</CustomField>