force-app/main/default/objects/inspire1__Project__c/fields/Reported_By_c__c.field-meta.xml
<CustomField>
    <fullName>Reported_By_c__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reported By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>