force-app/main/default/objects/inspire1__Project__c/fields/Resolution_Status__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Status__c</fullName>
    <label>Resolution Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Pending on Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>