force-app/main/default/objects/inspire1__Project__c/fields/RSPO_Liability_Status__c.field-meta.xml
<CustomField>
    <fullName>RSPO_Liability_Status__c</fullName>
    <label>RSPO Liability Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Not Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>