force-app/main/default/objects/inspire1__Project__c/fields/RSPO_Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>RSPO_Membership_Number__c</fullName>
    <formula>Program_Membership__r.RSPOMembershipNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RSPO Membership Number</label>
    <type>Text</type>
</CustomField>