force-app/main/default/objects/inspire1__Project__c/fields/RSPO_Public_Anno_Published__c.field-meta.xml
<CustomField>
    <fullName>RSPO_Public_Anno_Published__c</fullName>
    <label>RSPO Public Anno Published</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Not Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>