force-app/main/default/objects/inspire1__Project__c/fields/SCC_in_Scope__c.field-meta.xml
<CustomField>
    <fullName>SCC_in_Scope__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SCC in Scope</label>
    <type>Checkbox</type>
</CustomField>