force-app/main/default/objects/inspire1__Project__c/fields/Schedule_Automation__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Schedule Automation</label>
    <type>Checkbox</type>
</CustomField>