force-app/main/default/objects/inspire1__Project__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <label>Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ISH</fullName>
            </value>
            <value>
                <fullName>P&amp;C - POM</fullName>
            </value>
            <value>
                <fullName>NPP</fullName>
            </value>
            <value>
                <fullName>Special Audit</fullName>
            </value>
            <value>
                <fullName>SCC - Independent Mill</fullName>
            </value>
            <value>
                <fullName>SCC - Other</fullName>
            </value>
            <value>
                <fullName>SCC - PKC</fullName>
            </value>
            <value>
                <fullName>SCC - Port</fullName>
            </value>
            <value>
                <fullName>SCC - Refinery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>