force-app/main/default/objects/inspire1__Project__c/fields/SharePoint_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>SharePoint_Folder_Id__c</fullName>
    <description>Field that holds SharePoint&apos;s folder Id.</description>
    <label>SharePoint Folder Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>