force-app/main/default/objects/inspire1__Project__c/fields/SharePoint_Folder_URL__c.field-meta.xml
<CustomField>
    <fullName>SharePoint_Folder_URL__c</fullName>
    <description>Field that holds SharePoint&apos;s folder Id.</description>
    <label>SharePoint Folder URL</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>