force-app/main/default/objects/inspire1__Project__c/fields/Status_of_license_on_PT__c.field-meta.xml
<CustomField>
    <fullName>Status_of_license_on_PT__c</fullName>
    <label>Status of license on PT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>License Approved</fullName>
            </value>
            <value>
                <fullName>License Denied</fullName>
            </value>
            <value>
                <fullName>License Extended</fullName>
            </value>
            <value>
                <fullName>License Review On-Going</fullName>
            </value>
            <value>
                <fullName>License Submitted</fullName>
            </value>
            <value>
                <fullName>License Suspended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>