force-app/main/default/objects/inspire1__Project__c/fields/TimeExtension__c.field-meta.xml
<CustomField>
    <fullName>TimeExtension__c</fullName>
    <label>Time Extension</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Issued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>