force-app/main/default/objects/inspire1__Project__c/fields/TimeExtensionNotes__c.field-meta.xml
<CustomField>
    <fullName>TimeExtensionNotes__c</fullName>
    <label>Time Extension Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>