force-app/main/default/objects/inspire1__Project__c/fields/Total_with_x_Markup__c.field-meta.xml
<CustomField>
    <fullName>Total_with_x_Markup__c</fullName>
    <formula>inspire1__Actual_Cost__c  +  inspire1__Actual_Cost__c  *  Expense_Margin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total with x% Markup</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>