force-app/main/default/objects/inspire1__Project__c/fields/Traceability__c.field-meta.xml
<CustomField>
    <fullName>Traceability__c</fullName>
    <label>Traceability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Identity Preserved</fullName>
            </value>
            <value>
                <fullName>Mass Balance</fullName>
            </value>
            <value>
                <fullName>Segregation</fullName>
            </value>
            <value>
                <fullName>IP &amp; MB</fullName>
            </value>
            <value>
                <fullName>IP &amp; S</fullName>
            </value>
            <value>
                <fullName>IP &amp; MB &amp; S</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>