force-app/main/default/objects/inspire1__Project__c/fields/Type_of_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Assessment__c</fullName>
    <formula>TEXT( Type_of_Audit__c ) + &apos;-&apos; + TEXT(Current_Audit_Session__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type of Assessment</label>
    <type>Text</type>
</CustomField>