force-app/main/default/objects/inspire1__Project__c/fields/Type_of_Audit__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Audit__c</fullName>
    <label>Type of Audit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Desk</fullName>
            </value>
            <value>
                <fullName>Initial</fullName>
            </value>
            <value>
                <fullName>Mock</fullName>
            </value>
            <value>
                <fullName>Not required</fullName>
            </value>
            <value>
                <fullName>Onsite</fullName>
            </value>
            <value>
                <fullName>Recertification</fullName>
            </value>
            <value>
                <fullName>Scope extension</fullName>
            </value>
            <value>
                <fullName>Special Audit</fullName>
            </value>
            <value>
                <fullName>Surveillance</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>