force-app/main/default/objects/inspire1__Project__c/fields/VolumeExtensionNotes__c.field-meta.xml
<CustomField>
    <fullName>VolumeExtensionNotes__c</fullName>
    <label>Volume Extension Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>