force-app/main/default/objects/inspire1__Project__c/fields/Willful_Violation__c.field-meta.xml
<CustomField>
    <fullName>Willful_Violation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Willful Violation</label>
    <type>Checkbox</type>
</CustomField>