force-app/main/default/objects/inspire1__Project__c/recordTypes/Bundle_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Bundle_Opportunity</fullName>
    <active>true</active>
    <label>Bundle Opportunity</label>
</RecordType>