force-app/main/default/objects/inspire1__Project__c/recordTypes/ECS.recordType-meta.xml
<RecordType>
    <fullName>ECS</fullName>
    <active>true</active>
    <label>ECS</label>
</RecordType>