force-app/main/default/objects/inspire1__Project__c/recordTypes/Food_and_Agriculture.recordType-meta.xml
<RecordType>
    <fullName>Food_and_Agriculture</fullName>
    <active>true</active>
    <label>Food and Agriculture</label>
</RecordType>