force-app/main/default/objects/inspire1__Project__c/recordTypes/Natural_Resources.recordType-meta.xml
<RecordType>
    <fullName>Natural_Resources</fullName>
    <active>true</active>
    <label>Natural Resources</label>
</RecordType>