force-app/main/default/objects/inspire1__Project__c/recordTypes/Research_and_Development.recordType-meta.xml
<RecordType>
    <fullName>Research_and_Development</fullName>
    <active>true</active>
    <label>Research and Development</label>
</RecordType>