force-app/main/default/objects/inspire1__Project__c/recordTypes/SCS_Consulting.recordType-meta.xml
<RecordType>
    <fullName>SCS_Consulting</fullName>
    <active>true</active>
    <label>SCS Consulting</label>
</RecordType>