force-app/main/default/objects/inspire1__Project__c/recordTypes/SCS_Standard.recordType-meta.xml
<RecordType>
    <fullName>SCS_Standard</fullName>
    <active>true</active>
    <description>RT for SCS Standard Records</description>
    <label>SCS Standard</label>
</RecordType>