force-app/main/default/objects/inspire1__Project__c/recordTypes/Training_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Training_Opportunity</fullName>
    <active>true</active>
    <label>Training_Opportunity</label>
</RecordType>