force-app/main/default/objects/inspire1__Project__c/validationRules/ProgramFieldIsMandatoryForTemplates.validationRule-meta.xml
<ValidationRule>
    <fullName>ProgramFieldIsMandatoryForTemplates</fullName>
    <active>true</active>
    <errorConditionFormula>AND( (inspire1__Template__c = true), ISBLANK(Program__c), NOT( OR( RecordType.Name = &apos;SCS Standard&apos; , RecordType.Name = &apos;Admin&apos; )))</errorConditionFormula>
    <errorMessage>Please choose related program</errorMessage>
</ValidationRule>