force-app/main/default/objects/inspire1__Project__c/listViews/Admin_Project.listView-meta.xml
<ListView>
    <fullName>Admin_Project</fullName>
    <columns>NAME</columns>
    <columns>inspire1__Owner_Name__c</columns>
    <columns>inspire1__Project_Status__c</columns>
    <columns>inspire1__Complete__c</columns>
    <columns>inspire1__Percent_Slippage__c</columns>
    <columns>inspire1__Actual_Start_Date__c</columns>
    <columns>inspire1__Actual_Finish_Date__c</columns>
    <columns>inspire1__Description__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>inspire1__Project__c.Admin</value>
    </filters>
    <label>Admin Project</label>
</ListView>