force-app/main/default/objects/inspire1__Project__c/listViews/All_Templates.listView-meta.xml
<ListView>
    <fullName>All_Templates</fullName>
    <columns>NAME</columns>
    <columns>inspire1__Template__c</columns>
    <columns>Program__c</columns>
    <columns>inspire1__Description__c</columns>
    <columns>inspire1__Total_Tasks_Rollup__c</columns>
    <columns>inspire1__Owner_Name__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>inspire1__Template__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Templates</label>
</ListView>