force-app/main/default/objects/inspire1__Project__c/listViews/Food_and_Agriculture_Projects.listView-meta.xml
<ListView>
    <fullName>Food_and_Agriculture_Projects</fullName>
    <columns>NAME</columns>
    <columns>inspire1__Description__c</columns>
    <columns>inspire1__Project_Status__c</columns>
    <columns>inspire1__Actual_Start_Date__c</columns>
    <columns>inspire1__Actual_Finish_Date__c</columns>
    <columns>inspire1__Baseline_Start_Date__c</columns>
    <columns>inspire1__Baseline_Finish_Date__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>inspire1__Owner_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>inspire1__Project__c.Food_and_Agriculture</value>
    </filters>
    <label>Food and Agriculture Projects</label>
</ListView>