force-app/main/default/objects/inspire1__Project__c/listViews/inspire1__All_Projects.listView-meta.xml
<ListView>
    <fullName>inspire1__All_Projects</fullName>
    <columns>NAME</columns>
    <columns>inspire1__Owner_Name__c</columns>
    <columns>inspire1__Project_Status__c</columns>
    <columns>inspire1__Complete__c</columns>
    <columns>inspire1__Percent_Slippage__c</columns>
    <columns>inspire1__Actual_Start_Date__c</columns>
    <columns>inspire1__Actual_Finish_Date__c</columns>
    <columns>inspire1__Description__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>inspire1__Account__c</columns>
    <columns>Program__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program__c</field>
        <operation>contains</operation>
        <value>Fair trade</value>
    </filters>
    <label>All Projects</label>
</ListView>