force-app/main/default/objects/inspire1__Project__c/listViews/inspire1__All_Projects_Overdue.listView-meta.xml
<ListView>
    <fullName>inspire1__All_Projects_Overdue</fullName>
    <columns>NAME</columns>
    <columns>inspire1__Owner_Name__c</columns>
    <columns>inspire1__Project_Status__c</columns>
    <columns>inspire1__Complete__c</columns>
    <columns>inspire1__Percent_Slippage__c</columns>
    <columns>inspire1__Description__c</columns>
    <columns>inspire1__Baseline_Start_Date__c</columns>
    <columns>inspire1__Baseline_Finish_Date__c</columns>
    <columns>inspire1__Actual_Start_Date__c</columns>
    <columns>inspire1__Actual_Finish_Date__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>inspire1__Project_Status__c</field>
        <operation>equals</operation>
        <value>In Progress,Not Started,Delayed</value>
    </filters>
    <filters>
        <field>inspire1__Baseline_Finish_Date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>All Projects - Overdue</label>
    <language>en_US</language>
</ListView>