force-app/main/default/objects/inspire1__Project__c/listViews/inspire1__All_Task_Lists.listView-meta.xml
<ListView>
    <fullName>inspire1__All_Task_Lists</fullName>
    <columns>NAME</columns>
    <columns>inspire1__Owner_Name__c</columns>
    <columns>inspire1__Project_Status__c</columns>
    <columns>inspire1__Complete__c</columns>
    <columns>inspire1__Total_Tasks_Rollup__c</columns>
    <columns>inspire1__Description__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>inspire1__Project_Type2__c</field>
        <operation>equals</operation>
        <value>Task List</value>
    </filters>
    <label>All Task Lists</label>
</ListView>