force-app/main/default/objects/inspire1__Project__c/listViews/inspire1__All_Waterfall_Projects.listView-meta.xml
<ListView>
    <fullName>inspire1__All_Waterfall_Projects</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>inspire1__Owner_Name__c</columns>
    <columns>inspire1__Project_Status__c</columns>
    <columns>inspire1__Complete__c</columns>
    <columns>inspire1__Percent_Slippage__c</columns>
    <columns>inspire1__Actual_Start_Date__c</columns>
    <columns>inspire1__Actual_Finish_Date__c</columns>
    <columns>inspire1__Description__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>inspire1__Project_Type2__c</field>
        <operation>equals</operation>
        <value>Waterfall</value>
    </filters>
    <filters>
        <field>inspire1__Project_Type2__c</field>
        <operation>equals</operation>
    </filters>
    <label>All Waterfall Projects</label>
</ListView>