force-app/main/default/objects/inspire1__Project__c/listViews/inspire1__My_Agile_Projects.listView-meta.xml
<ListView>
    <fullName>inspire1__My_Agile_Projects</fullName>
    <columns>NAME</columns>
    <columns>inspire1__Owner_Name__c</columns>
    <columns>inspire1__Project_Status__c</columns>
    <columns>inspire1__Project_Key__c</columns>
    <columns>inspire1__Description__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>inspire1__Project_Type2__c</field>
        <operation>equals</operation>
        <value>Agile</value>
    </filters>
    <label>My Agile Projects</label>
</ListView>