force-app/main/default/objects/inspire1__Project__c/listViews/inspire1__My_Projects_In_Progress.listView-meta.xml
<ListView>
    <fullName>inspire1__My_Projects_In_Progress</fullName>
    <columns>NAME</columns>
    <columns>inspire1__Project_Status__c</columns>
    <columns>inspire1__Complete__c</columns>
    <columns>inspire1__Percent_Slippage__c</columns>
    <columns>inspire1__Actual_Start_Date__c</columns>
    <columns>inspire1__Actual_Finish_Date__c</columns>
    <columns>inspire1__Description__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>inspire1__Project_Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <label>My Projects - In Progress</label>
</ListView>